feat: changed some kitty settings

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-# font_family      monospace
-# bold_font        auto
-# italic_font      auto
-# bold_italic_font auto
+ font_family      JetBrainsMono Nerd Font Mono Regular
+ bold_font        JetBrainsMono Nerd Font Mono Bold
+ italic_font      JetBrainsMono Nerd Font Mono Italic
+ bold_italic_font JetBrainsMono Nerd Font Mono Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -183,7 +183,7 @@
 #: arrive at a pixel value. There must be four values corresponding to
 #: thin, normal, thick, and very thick lines.
 
-# undercurl_style thin-sparse
+ undercurl_style thin-sparse
 
 #: The style with which undercurls are rendered. This option takes the
 #: form (thin|thick)-(sparse|dense). Thin and thick control the
@@ -248,6 +248,7 @@
 
 #: }}}
 
+#
 #: Cursor customization {{{
 
 # cursor #cccccc
@@ -271,7 +272,7 @@
 #: so if you want to override it, place your value after the lines
 #: where the theme file is included.
 
-# cursor_shape block
+ cursor_shape beam
 
 #: The cursor shape can be one of block, beam, underline. Note that
 #: when reloading the config this will be changed only if the cursor
@@ -373,6 +374,7 @@
 #: }}}
 
 #: Mouse {{{
+#
 
 # mouse_hide_wait 3.0
 
@@ -421,7 +423,7 @@
 #: specified using backslash escapes, to specify a backslash use a
 #: double backslash.
 
-# show_hyperlink_targets no
+ show_hyperlink_targets yes
 
 #: When the mouse hovers over a terminal hyperlink, show the actual
 #: URL that will be activated when the hyperlink is clicked.
@@ -479,7 +481,7 @@
 #: no-op:
 #:     Has no effect.
 
-# strip_trailing_spaces never
+ strip_trailing_spaces smart
 
 #: Remove spaces at the end of lines when copying to clipboard. A
 #: value of smart will do it when using normal selections, but not
@@ -775,11 +777,12 @@
 
 #: }}}
 
-#: Window layout {{{
+#: Window layout {{
+#{
 
-# remember_window_size  yes
-# initial_window_width  640
-# initial_window_height 400
+ remember_window_size  yes
+ initial_window_width  1280
+ initial_window_height 800
 
 #: If enabled, the OS Window size will be remembered so that new
 #: instances of kitty will have the same size as the previous
@@ -812,7 +815,7 @@
 #: to be pts. Note that borders are displayed only when more than one
 #: window is visible. They are meant to separate multiple windows.
 
-# draw_minimal_borders yes
+ draw_minimal_borders yes
 
 #: Draw only the minimum borders needed. This means that only the
 #: borders that separate the window from a neighbor are drawn. Note
