feat: changed kitty theme

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -24,7 +24,7 @@
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-# font_size 11.0
+ font_size 14.0
 
 #: Font size (in pts).
 
@@ -2478,3 +2478,9 @@ allow_remote_control yes
 #: }}}
 
 #: }}}
+
+
+# BEGIN_KITTY_THEME
+# Catppuccin-Macchiato
+include current-theme.conf
+# END_KITTY_THEME
