--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -183,7 +183,7 @@
 #: arrive at a pixel value. There must be four values corresponding to
 #: thin, normal, thick, and very thick lines.
 
- undercurl_style thin-sparse
+ undercurl_style thin-dense
 
 #: The style with which undercurls are rendered. This option takes the
 #: form (thin|thick)-(sparse|dense). Thin and thick control the
