feat: added calibre cask brew

--- a/.config/brew/Brewfile
+++ b/.config/brew/Brewfile
@@ -43,6 +43,7 @@ cask "appcleaner"
 cask "bitwarden"
 cask "bruno"
 cask "batteryboi"
+cask "calibre"
 cask "command-x"
 cask "discord"
 cask "docker"
