--- a/.config/spicetify/config-xpui.ini
+++ b/.config/spicetify/config-xpui.ini
@@ -29,5 +29,5 @@ experimental_features = 1
 
 ; DO NOT CHANGE!
 [Backup]
-version = 1.2.35.663.gb699649e
-with    = 2.36.4
+version = 1.2.44.405.g81fd6352
+with    = 2.37.1
