--- a/.config/git/config.local.example
+++ b/.config/git/config.local.example
@@ -1,4 +1,4 @@
-# [user]
-#        name = First Last
-#        email = <your@email.com>
+[user]
+        name = First Last
+        email = your@email.com
 
