feat: improved git config GitHub integration

--- a/.config/git/config
+++ b/.config/git/config
@@ -29,4 +29,10 @@
 [diff]
 	colorMoved = default
 
+[credential "https://github.com"]
+    helper = 
+    helper = !/opt/homebrew/bin/gh auth git-credential
 
+[credential "https://gist.github.com"]
+    helper = 
+    helper = !/opt/homebrew/bin/gh auth git-credential
