--- a/.config/brew/Brewfile
+++ b/.config/brew/Brewfile
@@ -3,7 +3,6 @@
 # ------
 tap "homebrew/bundle"
 tap "homebrew/cask-versions"
-tap "homebrew/cask-fonts"
 # ------
 # Brews
 # ------
@@ -18,6 +17,7 @@ brew "git"
 brew "git-delta"
 brew "go"
 brew "howdoi"
+brew "imagemagick"
 brew "jq"
 brew "k9s"
 brew "kepubify"
