chore: I am so stupid;TIL how ssh usernames work

--- a/.ssh/config
+++ b/.ssh/config
@@ -9,6 +9,6 @@ Host *
 
 # GitHub configuration
 Host github.com
-    User desaianand1
+    User git
     HostName github.com
     PreferredAuthentications publickey
