feat: added scroll-reverser brew

--- a/.config/brew/Brewfile
+++ b/.config/brew/Brewfile
@@ -27,6 +27,7 @@ brew "pnpm"
 brew "postgresql@14"
 brew "pyenv"
 brew "pyenv-virtualenv"
+brew "scroll-reverser"
 brew "spicetify-cli"
 brew "stow"
 brew "thefuck"
