--- a/.config/spicetify/config-xpui.ini
+++ b/.config/spicetify/config-xpui.ini
@@ -29,5 +29,5 @@ experimental_features = 1
 
 ; DO NOT CHANGE!
 [Backup]
-version = 1.2.48.405.gf2c48e6f
+version = 1.2.49.439.gfae492c7
 with    = 2.38.4
