--- a/.config/spicetify/config-xpui.ini
+++ b/.config/spicetify/config-xpui.ini
@@ -1,33 +1,32 @@
-[Setting]
-prefs_path             = /Users/anand/Library/Application Support/Spotify/prefs
-current_theme          = marketplace
-color_scheme           = rose-pine-moon
-onject_css             = 1
-always_enable_devtools = 0
-spotify_path           = /Applications/Spotify.app/Contents/Resources
-inject_theme_js        = 1
-replace_colors         = 1
-overwrite_assets       = 0
-spotify_launch_flags   = 
-check_spicetify_update = 1
-inject_css             = 1
-
 [Preprocesses]
-expose_apis        = 1
 disable_sentry     = 1
 disable_ui_logging = 1
 remove_rtl_rule    = 1
+expose_apis        = 1
 
 [AdditionalOptions]
-extensions            = 
 custom_apps           = marketplace
-sidebar_config        = 0
+sidebar_config        = 1
 home_config           = 1
 experimental_features = 1
+extensions            = 
 
 [Patch]
 
+[Setting]
+prefs_path             = /Users/anand/Library/Application Support/Spotify/prefs
+current_theme          = marketplace
+inject_css             = 1
+replace_colors         = 1
+always_enable_devtools = 0
+spotify_path           = /Applications/Spotify.app/Contents/Resources
+inject_theme_js        = 1
+overwrite_assets       = 0
+spotify_launch_flags   = 
+check_spicetify_update = 1
+color_scheme           = 
+
 ; DO NOT CHANGE!
 [Backup]
-version = 1.2.49.439.gfae492c7
+version = 1.2.51.345.gcc39d911
 with    = 2.38.4
