feat: added shottr cask brew

--- a/.config/brew/Brewfile
+++ b/.config/brew/Brewfile
@@ -65,6 +65,7 @@ cask "maccy"
 cask "obsidian"
 cask "qbittorrent"
 cask "rectangle"
+cask "shottr"
 cask "spotify"
 cask "typora"
 cask "ubersicht"
