feat: added scroll-reverser brew

--- a/.config/brew/Brewfile
+++ b/.config/brew/Brewfile
@@ -65,6 +65,7 @@ cask "maccy"
 cask "obsidian"
 cask "qbittorrent"
 cask "rectangle"
+cask "scroll-reverser"
 cask "shottr"
 cask "spotify"
 cask "typora"
