feat: spicetify update

--- a/.config/spicetify/config-xpui.ini
+++ b/.config/spicetify/config-xpui.ini
@@ -28,5 +28,5 @@ color_scheme           =
 
 ; DO NOT CHANGE!
 [Backup]
-version = 1.2.56.502.ga68d2d4f
-with    = 2.38.7
+version = 1.2.58.498.g6afe77b7
+with    = 2.39.5
