feat: added raindropio cask

--- a/.config/brew/Brewfile
+++ b/.config/brew/Brewfile
@@ -64,6 +64,7 @@ cask "maccy"
 cask "msty"
 cask "obsidian"
 cask "qbittorrent"
+cask "raindropio"
 cask "rectangle"
 cask "scroll-reverser"
 cask "shottr"
