feat: updated spicetify config

--- a/.config/spicetify/config-xpui.ini
+++ b/.config/spicetify/config-xpui.ini
@@ -28,5 +28,5 @@ color_scheme           =
 
 ; DO NOT CHANGE!
 [Backup]
-version = 1.2.58.498.g6afe77b7
+version = 1.2.60.564.gcc6305cb
 with    = 2.39.5
