feat: updated spicetify version

--- a/.config/spicetify/config-xpui.ini
+++ b/.config/spicetify/config-xpui.ini
@@ -28,5 +28,5 @@ color_scheme           =
 
 ; DO NOT CHANGE!
 [Backup]
-version = 1.2.63.394.g126b0d89
-with    = 2.40.7
+version = 1.2.64.408.g0a9b557c
+with    = 2.40.11
