feat: added ente-auth cask brew

--- a/.config/brew/Brewfile
+++ b/.config/brew/Brewfile
@@ -51,6 +51,7 @@ cask "command-x"
 cask "coteditor"
 cask "discord"
 cask "docker"
+cask "ente-auth"
 cask "figma"
 cask "firefox-developer-edition"
 cask "font-fira-code-nerd-font"
