--- a/.config/spicetify/config-xpui.ini
+++ b/.config/spicetify/config-xpui.ini
@@ -28,5 +28,5 @@ color_scheme           =
 
 ; DO NOT CHANGE!
 [Backup]
-version = 1.2.66.447.g4e37e896
+version = 1.2.68.528.g50f97d42
 with    = 2.40.11
