feat: added pre-commit brew

--- a/.config/brew/Brewfile
+++ b/.config/brew/Brewfile
@@ -26,6 +26,7 @@ brew "mas"
 brew "neovim"
 brew "pnpm"
 brew "postgresql@14"
+brew "pre-commit"
 brew "pyenv"
 brew "pyenv-virtualenv"
 brew "scroll-reverser"
