--- a/.config/spicetify/config-xpui.ini
+++ b/.config/spicetify/config-xpui.ini
@@ -28,5 +28,5 @@ color_scheme           =
 
 ; DO NOT CHANGE!
 [Backup]
-version = 1.2.68.528.g50f97d42
-with    = 2.40.11
+version = 1.2.69.449.gfda8591a
+with    = 2.41.0
