feat: update spicetify

--- a/.config/spicetify/config-xpui.ini
+++ b/.config/spicetify/config-xpui.ini
@@ -6,7 +6,7 @@ expose_apis        = 1
 
 [AdditionalOptions]
 custom_apps           = marketplace
-sidebar_config        = 1
+sidebar_config        = 0
 home_config           = 1
 experimental_features = 1
 extensions            = 
@@ -28,5 +28,5 @@ color_scheme           =
 
 ; DO NOT CHANGE!
 [Backup]
-version = 1.2.69.449.gfda8591a
+version = 1.2.71.421.g794ff5e5
 with    = 2.41.0
