--- a/.config/spicetify/config-xpui.ini
+++ b/.config/spicetify/config-xpui.ini
@@ -28,5 +28,5 @@ color_scheme           =
 
 ; DO NOT CHANGE!
 [Backup]
-version = 1.2.71.421.g794ff5e5
-with    = 2.41.0
+version = 1.2.74.477.g3be53afe
+with    = 2.42.5
